test_regress/t/t_covergroup_cross_opt_unsup.out
%Warning-COVERIGN: t/t_covergroup_cross_opt_unsup.v:13:10: Ignoring unsupported coverage cross option: 'per_instance'
   13 |          option.per_instance = 1;   
      |          ^~~~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_covergroup_cross_opt_unsup.v:17:35: Unsupported: cross of 'var_x' which is not a coverpoint (implicit coverpoint)
                                                         : ... note: In instance 't'
   17 |       cross_implicit: cross cp_a, var_x;
      |                                   ^~~~~
%Error: Exiting due to
